refactoring et build de l'app

--- a/app.json
+++ b/app.json
@@ -21,13 +21,19 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.nekute.AAEtest"
     },
     "web": {
       "favicon": "./assets/favicon.png"
     },
     "plugins": [
       "expo-secure-store"
-    ]
+    ],
+    "extra": {
+      "eas": {
+        "projectId": "e2822c3f-34bd-4d5d-9582-e7f1e4af790f"
+      }
+    }
   }
 }
