changement de nom et d'icone

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "AAE-test",
+    "name": "Académie Air Espace",
     "slug": "aae",
     "version": "1.0.0",
     "orientation": "portrait",
