--- a/package.json
+++ b/package.json
@@ -15,10 +15,16 @@
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/native-stack": "^6.9.18",
     "expo": "~50.0.8",
+    "expo-localization": "~14.8.3",
     "expo-secure-store": "~12.8.1",
     "expo-status-bar": "~1.11.1",
+    "i18n-js": "^4.4.3",
+    "i18next": "^23.10.0",
+    "i18next-browser-languagedetector": "^7.2.0",
+    "i18next-http-backend": "^2.5.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-i18next": "^14.0.5",
     "react-native": "0.73.4",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-reanimated": "~3.6.2",
