--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@react-navigation/drawer": "^6.6.7",
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/native-stack": "^6.9.18",
-    "expo": "~50.0.8",
+    "expo": "^50.0.11",
     "expo-localization": "~14.8.3",
     "expo-secure-store": "~12.8.1",
     "expo-status-bar": "~1.11.1",
